--- a/case_study_01.ipynb
+++ b/case_study_01.ipynb
@@ -6,7 +6,7 @@
       "name": "case_study_01.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPZM9grmYUsGHrOXb6gz3BA",
+      "authorship_tag": "ABX9TyOAy4x6Rzxf/JcjuB6so8SF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -974,13 +974,76 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "%%sql\n",
+        "with orders_post_membership as \n",
+        "(\n",
+        "select s.customer_id,\n",
+        "       s.product_id,\n",
+        "       order_date,\n",
+        "       row_number() over (partition by s.customer_id order by order_date) as rnk\n",
+        "from \n",
+        "  sales s \n",
+        "   inner join\n",
+        "     members m \n",
+        "on s.customer_id = m.customer_id\n",
+        "and s.order_date > m.join_date\n",
+        ")\n",
+        "select customer_id,product_id,order_date\n",
+        "from\n",
+        "orders_post_membership where rnk=1 \n"
       ],
       "metadata": {
-        "id": "AQnBhThG3kzF"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 119
+        },
+        "id": "AQnBhThG3kzF",
+        "outputId": "b3f9b54d-60a5-47d5-9691-35dbe1844f03"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " * postgresql://vqpuxtpr:***@tiny.db.elephantsql.com/vqpuxtpr\n",
+            "2 rows affected.\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('A', 3, datetime.date(2021, 1, 10)), ('B', 1, datetime.date(2021, 1, 11))]"
+            ],
+            "text/html": [
+              "<table>\n",
+              "    <thead>\n",
+              "        <tr>\n",
+              "            <th>customer_id</th>\n",
+              "            <th>product_id</th>\n",
+              "            <th>order_date</th>\n",
+              "        </tr>\n",
+              "    </thead>\n",
+              "    <tbody>\n",
+              "        <tr>\n",
+              "            <td>A</td>\n",
+              "            <td>3</td>\n",
+              "            <td>2021-01-10</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>B</td>\n",
+              "            <td>1</td>\n",
+              "            <td>2021-01-11</td>\n",
+              "        </tr>\n",
+              "    </tbody>\n",
+              "</table>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 56
+        }
+      ]
     },
     {
       "cell_type": "markdown",
