--- a/case_study_01.ipynb
+++ b/case_study_01.ipynb
@@ -6,7 +6,7 @@
       "name": "case_study_01.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOAy4x6Rzxf/JcjuB6so8SF",
+      "authorship_tag": "ABX9TyMSNhGEF6NMhE74iSH8HJH7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 1,
       "metadata": {
         "id": "7uNqLRSfnRz7"
       },
@@ -60,7 +60,7 @@
       "metadata": {
         "id": "NiqL8A489y-X"
       },
-      "execution_count": 42,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -73,9 +73,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mxOh_CYpnoGP",
-        "outputId": "8cf19e84-b643-4447-bee7-e0dd4d8ce77c"
+        "outputId": "3c7a9c63-72b3-4d3d-9c8b-82789e12e90e"
       },
-      "execution_count": 47,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -85,7 +85,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 47
+          "execution_count": 15
         }
       ]
     },
@@ -99,9 +99,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4-zaNIT5oztJ",
-        "outputId": "0a1c41c0-0404-4d04-b4f8-596e98a2eadd"
+        "outputId": "50048d90-5b60-45b9-c542-fe61b5dc1d73"
       },
-      "execution_count": 10,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -124,9 +124,9 @@
           "height": 36
         },
         "id": "hDJWs-VZpqX9",
-        "outputId": "d0f19afd-d0bb-4583-d3dc-7753cee94353"
+        "outputId": "18318ff0-1597-4301-9438-f0d1dc869c81"
       },
-      "execution_count": 48,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -139,7 +139,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 48
+          "execution_count": 18
         }
       ]
     },
@@ -171,7 +171,7 @@
         "id": "a5BEMArEpR_m",
         "outputId": "b4dd4811-c4f5-49b0-dcba-3499c76e07be"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -225,7 +225,7 @@
         "id": "8r2x4xwdpTnK",
         "outputId": "8a4cbcf0-7402-499c-a451-9ce14f8cab39"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -265,7 +265,7 @@
         "id": "Tghrl9-Dp52X",
         "outputId": "12770e25-7bf9-432e-a379-eb1ed1f486ae"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -304,7 +304,7 @@
         "id": "X-hc4tkJqZTe",
         "outputId": "97d2ddad-87e1-49d1-a004-686f72a28d74"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -339,7 +339,7 @@
         "id": "Wa65Q4uXqenk",
         "outputId": "feb19922-08b6-4966-c815-e27e228691d2"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -404,7 +404,7 @@
         "id": "c7Ti697uyEte",
         "outputId": "9e9a4f22-765e-489a-b938-4642568641ad"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -600,7 +600,7 @@
         "id": "gps3ROKcqhBN",
         "outputId": "1d9998fa-088d-4793-b7b8-947708d615a7"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -669,7 +669,7 @@
         "id": "IQ8NcMaJr8EB",
         "outputId": "c3b3f40e-c8e6-4571-f935-c047f7a02ee0"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -745,7 +745,7 @@
         "id": "ORP6OdY_to2P",
         "outputId": "a1bb7040-a69b-4852-fe0c-113544c0eb9c"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -821,7 +821,7 @@
         "id": "HYy9Lyesyhkh",
         "outputId": "59ef717e-eed2-46cf-f02b-42358781af8c"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -892,7 +892,7 @@
         "id": "o4AQvyQ2ziNw",
         "outputId": "5c37cee9-17f0-4326-84a3-20cf0d6e5149"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1000,7 +1000,7 @@
         "id": "AQnBhThG3kzF",
         "outputId": "b3f9b54d-60a5-47d5-9691-35dbe1844f03"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1057,13 +1057,73 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "%%sql\n",
+        "with sales_temp as \n",
+        "(\n",
+        "    select s.customer_id,\n",
+        "           s.product_id,\n",
+        "           s.order_date,\n",
+        "           row_number() over (partition by s.customer_id \n",
+        "                              order by order_date desc\n",
+        "                              ) as rnk\n",
+        "    from sales s\n",
+        "    inner join members m on \n",
+        "    s.customer_id = m.customer_id and\n",
+        "    s.order_date < m.join_date  \n",
+        ")\n",
+        "select m.product_name,s.customer_id from sales_temp s\n",
+        "inner join menu m on m.product_id=s.product_id\n",
+        "where rnk=1"
       ],
       "metadata": {
-        "id": "rjAeXUAq674Y"
+        "id": "rjAeXUAq674Y",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 119
+        },
+        "outputId": "e169eeb2-f761-4998-df35-a9fa7fda75c6"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " * postgresql://vqpuxtpr:***@tiny.db.elephantsql.com/vqpuxtpr\n",
+            "2 rows affected.\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('sushi', 'B'), ('sushi', 'A')]"
+            ],
+            "text/html": [
+              "<table>\n",
+              "    <thead>\n",
+              "        <tr>\n",
+              "            <th>product_name</th>\n",
+              "            <th>customer_id</th>\n",
+              "        </tr>\n",
+              "    </thead>\n",
+              "    <tbody>\n",
+              "        <tr>\n",
+              "            <td>sushi</td>\n",
+              "            <td>B</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>sushi</td>\n",
+              "            <td>A</td>\n",
+              "        </tr>\n",
+              "    </tbody>\n",
+              "</table>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1077,13 +1137,77 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "%%sql\n",
+        "with order_pre_membership as \n",
+        "(\n",
+        "    select s.customer_id,\n",
+        "           s.product_id,\n",
+        "           m.price,\n",
+        "           s.order_date\n",
+        "    from sales s inner join menu m on \n",
+        "           s.product_id = m.product_id\n",
+        "                 inner join members mm on \n",
+        "           s.customer_id = mm.customer_id and\n",
+        "           s.order_date < mm.join_date\n",
+        ")\n",
+        "select customer_id,\n",
+        "       count(distinct product_id) prodcut_cnt,\n",
+        "       sum(price) total_amt_spent\n",
+        " from order_pre_membership\n",
+        " group by customer_id"
       ],
       "metadata": {
-        "id": "eVMs82j86_yY"
+        "id": "eVMs82j86_yY",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 119
+        },
+        "outputId": "8ecdaae9-4836-4787-a521-b435cdcd9f06"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " * postgresql://vqpuxtpr:***@tiny.db.elephantsql.com/vqpuxtpr\n",
+            "2 rows affected.\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('A', 2, 25), ('B', 2, 40)]"
+            ],
+            "text/html": [
+              "<table>\n",
+              "    <thead>\n",
+              "        <tr>\n",
+              "            <th>customer_id</th>\n",
+              "            <th>prodcut_cnt</th>\n",
+              "            <th>total_amt_spent</th>\n",
+              "        </tr>\n",
+              "    </thead>\n",
+              "    <tbody>\n",
+              "        <tr>\n",
+              "            <td>A</td>\n",
+              "            <td>2</td>\n",
+              "            <td>25</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>B</td>\n",
+              "            <td>2</td>\n",
+              "            <td>40</td>\n",
+              "        </tr>\n",
+              "    </tbody>\n",
+              "</table>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1097,13 +1221,76 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "%%sql\n",
+        "with menu_points as \n",
+        "(\n",
+        "  select product_id,\n",
+        "         product_name,\n",
+        "         price,\n",
+        "         case when product_name = 'sushi' then price * 2 * 10 \n",
+        "         else price * 10 end as points\n",
+        "  from menu\n",
+        ")\n",
+        "select s.customer_id,\n",
+        "       sum(points) total_points\n",
+        "from sales s\n",
+        "inner join \n",
+        "menu_points m on s.product_id = m.product_id\n",
+        "group by s.customer_id"
       ],
       "metadata": {
-        "id": "m3pNOPUQ7GEC"
+        "id": "m3pNOPUQ7GEC",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 140
+        },
+        "outputId": "af196cd6-1c5e-4caa-86ef-03ef6d31e792"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " * postgresql://vqpuxtpr:***@tiny.db.elephantsql.com/vqpuxtpr\n",
+            "3 rows affected.\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('B', 940), ('C', 360), ('A', 860)]"
+            ],
+            "text/html": [
+              "<table>\n",
+              "    <thead>\n",
+              "        <tr>\n",
+              "            <th>customer_id</th>\n",
+              "            <th>total_points</th>\n",
+              "        </tr>\n",
+              "    </thead>\n",
+              "    <tbody>\n",
+              "        <tr>\n",
+              "            <td>B</td>\n",
+              "            <td>940</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>C</td>\n",
+              "            <td>360</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>A</td>\n",
+              "            <td>860</td>\n",
+              "        </tr>\n",
+              "    </tbody>\n",
+              "</table>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
     },
     {
       "cell_type": "markdown",
