--- a/case_study_02.ipynb
+++ b/case_study_02.ipynb
@@ -6,7 +6,7 @@
       "name": "case_study_02.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNTnqCIW+lo1F7ywuSelIR7",
+      "authorship_tag": "ABX9TyPv1IYVVyUhrTTG+SZkmMRe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
       "metadata": {
         "id": "MI_JDMNM3gU3"
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -57,7 +57,7 @@
       "metadata": {
         "id": "kPkkCRWr4IDk"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -71,9 +71,9 @@
           "height": 92
         },
         "id": "mmgWOFL14KGx",
-        "outputId": "c0d7bd74-0ebb-41b1-a08a-e65efd9a9988"
+        "outputId": "0a48e486-4a88-4dea-bc07-c66ec58c51b6"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -94,7 +94,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 3
         }
       ]
     },
@@ -154,7 +154,7 @@
         "id": "p7KNNJC64Rlr",
         "outputId": "12aff190-a2be-449b-d7cc-2298fe37119d"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -267,7 +267,7 @@
         "id": "OhcCzKWX5Q_h",
         "outputId": "7af98078-9891-4b36-f433-658b90b3c051"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -297,6 +297,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "**A. Pizza Metrics**"
+      ],
+      "metadata": {
+        "id": "8RwC2Dq5O0JZ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "How many pizzas were ordered?"
       ],
       "metadata": {
@@ -306,13 +315,51 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "%sql select count(1) as ordered_pizza_cnt from customer_orders"
       ],
       "metadata": {
-        "id": "Pqsba2446zvq"
+        "id": "Pqsba2446zvq",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 98
+        },
+        "outputId": "23744f6e-74f2-4149-a586-171212564b8b"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " * postgresql://vqpuxtpr:***@tiny.db.elephantsql.com/vqpuxtpr\n",
+            "1 rows affected.\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[(14,)]"
+            ],
+            "text/html": [
+              "<table>\n",
+              "    <thead>\n",
+              "        <tr>\n",
+              "            <th>ordered_pizza_cnt</th>\n",
+              "        </tr>\n",
+              "    </thead>\n",
+              "    <tbody>\n",
+              "        <tr>\n",
+              "            <td>14</td>\n",
+              "        </tr>\n",
+              "    </tbody>\n",
+              "</table>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -326,13 +373,51 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "%sql select count(distinct customer_id) from customer_orders"
       ],
       "metadata": {
-        "id": "eF-36ZRq600z"
+        "id": "eF-36ZRq600z",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 98
+        },
+        "outputId": "6febad09-65f1-471b-bf32-c6b1a0b2ff90"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " * postgresql://vqpuxtpr:***@tiny.db.elephantsql.com/vqpuxtpr\n",
+            "1 rows affected.\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[(5,)]"
+            ],
+            "text/html": [
+              "<table>\n",
+              "    <thead>\n",
+              "        <tr>\n",
+              "            <th>count</th>\n",
+              "        </tr>\n",
+              "    </thead>\n",
+              "    <tbody>\n",
+              "        <tr>\n",
+              "            <td>5</td>\n",
+              "        </tr>\n",
+              "    </tbody>\n",
+              "</table>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -346,13 +431,72 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "%%sql \n",
+        "with runner_orders_cleaned as (\n",
+        "select order_id,\n",
+        "       runner_id,\n",
+        "       case when upper(cancellation) in ('CUSTOMER CANCELLATION','RESTAURANT CANCELLATION')\n",
+        "       then 'Y' \n",
+        "       else 'N' end as \"cancelled\"\n",
+        "from runner_orders\n",
+        ")\n",
+        "select runner_id,count(distinct order_id) as num_orders\n",
+        "from runner_orders_cleaned where cancelled = 'N'\n",
+        "group by runner_id"
       ],
       "metadata": {
-        "id": "Mg4HrvhU6uMr"
+        "id": "Mg4HrvhU6uMr",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 140
+        },
+        "outputId": "25419647-db47-4d3f-8479-de4ef0aeab73"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " * postgresql://vqpuxtpr:***@tiny.db.elephantsql.com/vqpuxtpr\n",
+            "3 rows affected.\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[(1, 4), (2, 3), (3, 1)]"
+            ],
+            "text/html": [
+              "<table>\n",
+              "    <thead>\n",
+              "        <tr>\n",
+              "            <th>runner_id</th>\n",
+              "            <th>num_orders</th>\n",
+              "        </tr>\n",
+              "    </thead>\n",
+              "    <tbody>\n",
+              "        <tr>\n",
+              "            <td>1</td>\n",
+              "            <td>4</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>2</td>\n",
+              "            <td>3</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>3</td>\n",
+              "            <td>1</td>\n",
+              "        </tr>\n",
+              "    </tbody>\n",
+              "</table>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -366,13 +510,73 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "%%sql \n",
+        "with order_with_cancel_status as \n",
+        "(\n",
+        "select distinct\n",
+        "       order_id,\n",
+        "       case when upper(cancellation) in ('CUSTOMER CANCELLATION',\n",
+        "                                          'RESTAURANT CANCELLATION'\n",
+        "                                        ) then 'Y' else 'N' end as \"cancelled\"\n",
+        "from runner_orders\n",
+        ")\n",
+        "select c.pizza_id,\n",
+        "       count(1) as cnt \n",
+        "from order_with_cancel_status s \n",
+        "    inner join \n",
+        "    customer_orders c \n",
+        "    on s.order_id = c.order_id and s.cancelled = 'N'\n",
+        "group by c.pizza_id "
       ],
       "metadata": {
-        "id": "srmecBtI6uoQ"
+        "id": "srmecBtI6uoQ",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 119
+        },
+        "outputId": "a8170587-4090-44a9-83cd-a397e025ef49"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " * postgresql://vqpuxtpr:***@tiny.db.elephantsql.com/vqpuxtpr\n",
+            "2 rows affected.\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[(1, 9), (2, 3)]"
+            ],
+            "text/html": [
+              "<table>\n",
+              "    <thead>\n",
+              "        <tr>\n",
+              "            <th>pizza_id</th>\n",
+              "            <th>cnt</th>\n",
+              "        </tr>\n",
+              "    </thead>\n",
+              "    <tbody>\n",
+              "        <tr>\n",
+              "            <td>1</td>\n",
+              "            <td>9</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>2</td>\n",
+              "            <td>3</td>\n",
+              "        </tr>\n",
+              "    </tbody>\n",
+              "</table>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -386,13 +590,99 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "%%sql\n",
+        "with customer_pizza_cnt as (\n",
+        "select customer_id,\n",
+        "       pizza_name,\n",
+        "       count(1) as cnt\n",
+        "from customer_orders c inner join pizza_names p \n",
+        "on c.pizza_id =p.pizza_id\n",
+        "group by customer_id,pizza_name\n",
+        "),\n",
+        "customer_pizza_cnt_pivoted_tmp as (\n",
+        "select customer_id,\n",
+        "       case when upper(pizza_name) = 'VEGETARIAN' then cnt else 0 end as vegetarian,\n",
+        "       case when upper(pizza_name) = 'MEATLOVERS' then cnt else 0 end as meatlovers\n",
+        "       from customer_pizza_cnt\n",
+        "       \n",
+        ")\n",
+        "select customer_id, \n",
+        "      sum(vegetarian) as vegetarian,\n",
+        "      sum(meatlovers) as meatlover\n",
+        "from customer_pizza_cnt_pivoted_tmp\n",
+        "group by customer_id"
       ],
       "metadata": {
-        "id": "4MTHvB1c6vJJ"
+        "id": "4MTHvB1c6vJJ",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 182
+        },
+        "outputId": "c01205bb-61b5-4cd7-fd86-a6fdcd05311a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " * postgresql://vqpuxtpr:***@tiny.db.elephantsql.com/vqpuxtpr\n",
+            "5 rows affected.\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[(101, Decimal('1'), Decimal('2')),\n",
+              " (103, Decimal('1'), Decimal('3')),\n",
+              " (104, Decimal('0'), Decimal('3')),\n",
+              " (105, Decimal('1'), Decimal('0')),\n",
+              " (102, Decimal('1'), Decimal('2'))]"
+            ],
+            "text/html": [
+              "<table>\n",
+              "    <thead>\n",
+              "        <tr>\n",
+              "            <th>customer_id</th>\n",
+              "            <th>vegetarian</th>\n",
+              "            <th>meatlover</th>\n",
+              "        </tr>\n",
+              "    </thead>\n",
+              "    <tbody>\n",
+              "        <tr>\n",
+              "            <td>101</td>\n",
+              "            <td>1</td>\n",
+              "            <td>2</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>103</td>\n",
+              "            <td>1</td>\n",
+              "            <td>3</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>104</td>\n",
+              "            <td>0</td>\n",
+              "            <td>3</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>105</td>\n",
+              "            <td>1</td>\n",
+              "            <td>0</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>102</td>\n",
+              "            <td>1</td>\n",
+              "            <td>2</td>\n",
+              "        </tr>\n",
+              "    </tbody>\n",
+              "</table>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -433,6 +723,17 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "Gl_DAtslJTYN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "  What was the total volume of pizzas ordered for each hour of the day?"
@@ -444,7 +745,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "hat was the volume of orders for each day of the week?"
+        "what was the volume of orders for each day of the week?"
       ],
       "metadata": {
         "id": "fquE93Sz6qgp"
