--- a/case_study_02.ipynb
+++ b/case_study_02.ipynb
@@ -6,7 +6,7 @@
       "name": "case_study_02.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPv1IYVVyUhrTTG+SZkmMRe",
+      "authorship_tag": "ABX9TyNYNGvxYHfA3mp2JdJqnuAf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -71,7 +71,7 @@
           "height": 92
         },
         "id": "mmgWOFL14KGx",
-        "outputId": "0a48e486-4a88-4dea-bc07-c66ec58c51b6"
+        "outputId": "964b02d3-d81c-46fd-faea-58df401e4c38"
       },
       "execution_count": 3,
       "outputs": [
@@ -152,9 +152,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "p7KNNJC64Rlr",
-        "outputId": "12aff190-a2be-449b-d7cc-2298fe37119d"
+        "outputId": "08d8d065-8769-4b24-b24f-8fb4208e5be6"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -183,7 +183,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 4
         }
       ]
     },
@@ -265,9 +265,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OhcCzKWX5Q_h",
-        "outputId": "7af98078-9891-4b36-f433-658b90b3c051"
+        "outputId": "69a6c33c-ebd7-48f9-e9b8-212e1279a317"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -290,7 +290,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 5
         }
       ]
     },
@@ -323,9 +323,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 98
         },
-        "outputId": "23744f6e-74f2-4149-a586-171212564b8b"
+        "outputId": "55c255c4-5434-4c11-c972-228cf496e473"
       },
-      "execution_count": 4,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -357,7 +357,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 6
         }
       ]
     },
@@ -381,9 +381,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 98
         },
-        "outputId": "6febad09-65f1-471b-bf32-c6b1a0b2ff90"
+        "outputId": "e5fdc093-b2cb-4a42-aa31-4ad104bde840"
       },
-      "execution_count": 5,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -415,7 +415,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 7
         }
       ]
     },
@@ -435,7 +435,8 @@
         "with runner_orders_cleaned as (\n",
         "select order_id,\n",
         "       runner_id,\n",
-        "       case when upper(cancellation) in ('CUSTOMER CANCELLATION','RESTAURANT CANCELLATION')\n",
+        "       case when upper(cancellation) in ('CUSTOMER CANCELLATION',\n",
+        "                                          'RESTAURANT CANCELLATION')\n",
         "       then 'Y' \n",
         "       else 'N' end as \"cancelled\"\n",
         "from runner_orders\n",
@@ -450,9 +451,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 140
         },
-        "outputId": "25419647-db47-4d3f-8479-de4ef0aeab73"
+        "outputId": "8f62370c-d42a-4780-9b2a-c9129ade19ff"
       },
-      "execution_count": 12,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
@@ -494,7 +495,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 39
         }
       ]
     },
@@ -534,9 +535,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 119
         },
-        "outputId": "a8170587-4090-44a9-83cd-a397e025ef49"
+        "outputId": "1646b070-b838-4c27-875c-02702ec5e749"
       },
-      "execution_count": 19,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -574,7 +575,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 15
         }
       ]
     },
@@ -618,9 +619,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 182
         },
-        "outputId": "c01205bb-61b5-4cd7-fd86-a6fdcd05311a"
+        "outputId": "ba792cbb-6307-4ac5-a082-3c8d7e8eadcb"
       },
-      "execution_count": 34,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -680,7 +681,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 34
+          "execution_count": 10
         }
       ]
     },
@@ -696,13 +697,67 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "%%sql\n",
+        "with cancelled_orders as \n",
+        " (\n",
+        "   select order_id \n",
+        "   from runner_orders \n",
+        "   where upper(cancellation) in ('CUSTOMER CANCELLATION',\n",
+        "                                 'RESTAURANT CANCELLATION') \n",
+        " )\n",
+        "select order_id,\n",
+        "      count(1) as cnt \n",
+        "from customer_orders \n",
+        "where order_id not in (select order_id from cancelled_orders)\n",
+        "group by order_id\n",
+        "order by cnt desc \n",
+        "limit 1"
       ],
       "metadata": {
-        "id": "S-85Nnzg6vsq"
+        "id": "S-85Nnzg6vsq",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 98
+        },
+        "outputId": "4a158c8f-ac45-4fa5-b873-0566b255a760"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " * postgresql://vqpuxtpr:***@tiny.db.elephantsql.com/vqpuxtpr\n",
+            "1 rows affected.\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[(4, 3)]"
+            ],
+            "text/html": [
+              "<table>\n",
+              "    <thead>\n",
+              "        <tr>\n",
+              "            <th>order_id</th>\n",
+              "            <th>cnt</th>\n",
+              "        </tr>\n",
+              "    </thead>\n",
+              "    <tbody>\n",
+              "        <tr>\n",
+              "            <td>4</td>\n",
+              "            <td>3</td>\n",
+              "        </tr>\n",
+              "    </tbody>\n",
+              "</table>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -712,6 +767,88 @@
       "metadata": {
         "id": "ngoyep2R6YTi"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%sql\n",
+        "select customer_id,\n",
+        " sum(case when (extras is null or extras = '' or extras = 'null') and \n",
+        "           (exclusions is null or exclusions='' or exclusions = 'null') then 1\n",
+        " else 0 end) as no_change,\n",
+        " sum(case when not ((extras is null or extras = '' or extras = 'null') and \n",
+        "           (exclusions is null or exclusions='' or exclusions = 'null')) then 1\n",
+        " else 0 end) as change\n",
+        "from customer_orders\n",
+        "group by customer_id"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 182
+        },
+        "id": "jRtblrwilxfe",
+        "outputId": "b73aefff-368d-4a36-d313-f6fd3ea69079"
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " * postgresql://vqpuxtpr:***@tiny.db.elephantsql.com/vqpuxtpr\n",
+            "5 rows affected.\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[(101, 3, 0), (103, 0, 4), (104, 1, 2), (105, 0, 1), (102, 3, 0)]"
+            ],
+            "text/html": [
+              "<table>\n",
+              "    <thead>\n",
+              "        <tr>\n",
+              "            <th>customer_id</th>\n",
+              "            <th>no_change</th>\n",
+              "            <th>change</th>\n",
+              "        </tr>\n",
+              "    </thead>\n",
+              "    <tbody>\n",
+              "        <tr>\n",
+              "            <td>101</td>\n",
+              "            <td>3</td>\n",
+              "            <td>0</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>103</td>\n",
+              "            <td>0</td>\n",
+              "            <td>4</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>104</td>\n",
+              "            <td>1</td>\n",
+              "            <td>2</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>105</td>\n",
+              "            <td>0</td>\n",
+              "            <td>1</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>102</td>\n",
+              "            <td>3</td>\n",
+              "            <td>0</td>\n",
+              "        </tr>\n",
+              "    </tbody>\n",
+              "</table>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 53
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -730,7 +867,7 @@
       "metadata": {
         "id": "Gl_DAtslJTYN"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
