--- a/case_study_02.ipynb
+++ b/case_study_02.ipynb
@@ -6,7 +6,7 @@
       "name": "case_study_02.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNYNGvxYHfA3mp2JdJqnuAf",
+      "authorship_tag": "ABX9TyMvkpziGA7JfMe5ZRLDXZMV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
       "metadata": {
         "id": "MI_JDMNM3gU3"
       },
-      "execution_count": 1,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -55,10 +55,23 @@
         "%load_ext sql"
       ],
       "metadata": {
-        "id": "kPkkCRWr4IDk"
+        "id": "kPkkCRWr4IDk",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "37a5e69e-65ff-47e9-8fe5-be44612f08f9"
       },
-      "execution_count": 2,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The sql extension is already loaded. To reload it, use:\n",
+            "  %reload_ext sql\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -68,21 +81,13 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 92
+          "height": 36
         },
         "id": "mmgWOFL14KGx",
-        "outputId": "964b02d3-d81c-46fd-faea-58df401e4c38"
+        "outputId": "65cdb3c7-845d-4e82-c950-5b5eb58732dd"
       },
-      "execution_count": 3,
+      "execution_count": 15,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/psycopg2/__init__.py:144: UserWarning: The psycopg2 wheel package will be renamed from release 2.8; in order to keep installing from binary please use \"pip install psycopg2-binary\" instead. For details see: <http://initd.org/psycopg/docs/install.html#binary-install-from-pypi>.\n",
-            "  \"\"\")\n"
-          ]
-        },
         {
           "output_type": "execute_result",
           "data": {
@@ -94,7 +99,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 15
         }
       ]
     },
@@ -152,9 +157,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "p7KNNJC64Rlr",
-        "outputId": "08d8d065-8769-4b24-b24f-8fb4208e5be6"
+        "outputId": "10f25e0e-9695-4b3a-bade-dce63905c9ae"
       },
-      "execution_count": 4,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -183,7 +188,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 16
         }
       ]
     },
@@ -265,9 +270,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OhcCzKWX5Q_h",
-        "outputId": "69a6c33c-ebd7-48f9-e9b8-212e1279a317"
+        "outputId": "2c992aa6-6b1a-4e31-9dcc-5651e55754dd"
       },
-      "execution_count": 5,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -290,7 +295,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 17
         }
       ]
     },
@@ -323,9 +328,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 98
         },
-        "outputId": "55c255c4-5434-4c11-c972-228cf496e473"
+        "outputId": "20b24c94-73ff-45a1-ae27-910f3d9d841c"
       },
-      "execution_count": 6,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -357,7 +362,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 18
         }
       ]
     },
@@ -381,9 +386,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 98
         },
-        "outputId": "e5fdc093-b2cb-4a42-aa31-4ad104bde840"
+        "outputId": "3e1b9766-ab4d-4c40-e47e-72cd7b5e619e"
       },
-      "execution_count": 7,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -415,7 +420,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 19
         }
       ]
     },
@@ -451,9 +456,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 140
         },
-        "outputId": "8f62370c-d42a-4780-9b2a-c9129ade19ff"
+        "outputId": "f0feb491-b349-4dba-e85a-44a86f5167e4"
       },
-      "execution_count": 39,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -495,7 +500,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 39
+          "execution_count": 20
         }
       ]
     },
@@ -535,9 +540,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 119
         },
-        "outputId": "1646b070-b838-4c27-875c-02702ec5e749"
+        "outputId": "0be33714-46c1-4515-f35a-80bf1f8d88bf"
       },
-      "execution_count": 15,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -575,7 +580,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 21
         }
       ]
     },
@@ -619,9 +624,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 182
         },
-        "outputId": "ba792cbb-6307-4ac5-a082-3c8d7e8eadcb"
+        "outputId": "3afaf053-406f-49e8-a32e-d507118979d3"
       },
-      "execution_count": 10,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -681,7 +686,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 22
         }
       ]
     },
@@ -719,9 +724,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 98
         },
-        "outputId": "4a158c8f-ac45-4fa5-b873-0566b255a760"
+        "outputId": "6bb40d22-84a0-4513-b13e-c44ae8cf4b13"
       },
-      "execution_count": 38,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -755,7 +760,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 38
+          "execution_count": 23
         }
       ]
     },
@@ -788,9 +793,9 @@
           "height": 182
         },
         "id": "jRtblrwilxfe",
-        "outputId": "b73aefff-368d-4a36-d313-f6fd3ea69079"
+        "outputId": "60a7d4fa-dafd-4170-9a50-bbfa5da05d56"
       },
-      "execution_count": 53,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -846,7 +851,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 53
+          "execution_count": 24
         }
       ]
     },
@@ -862,13 +867,76 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "%%sql\n",
+        "with cancelled_orders as (\n",
+        "  select order_id from runner_orders where upper(cancellation) in \n",
+        "                                                    ('CUSTOMER CANCELLATION',\n",
+        "                                                     'RESTAURANT CANCELLATION')\n",
+        "),\n",
+        "orders_with_extra_exclusions as \n",
+        "(\n",
+        "  select * \n",
+        "  from customer_orders \n",
+        "  where \n",
+        "         not ((extras is null or extras = '' or extras = 'null') or\n",
+        "            (exclusions is null or exclusions ='' or exclusions = 'null'))\n",
+        ")\n",
+        "select * from orders_with_extra_exclusions where\n",
+        "order_id not in (select order_id from cancelled_orders)"
       ],
       "metadata": {
-        "id": "Gl_DAtslJTYN"
+        "id": "Gl_DAtslJTYN",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 98
+        },
+        "outputId": "5d55a8d2-274d-464a-f614-a8627a86a70c"
       },
-      "execution_count": 10,
-      "outputs": []
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " * postgresql://vqpuxtpr:***@tiny.db.elephantsql.com/vqpuxtpr\n",
+            "1 rows affected.\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[(10, 104, 1, '2, 6', '1, 4', datetime.datetime(2020, 1, 11, 18, 34, 49))]"
+            ],
+            "text/html": [
+              "<table>\n",
+              "    <thead>\n",
+              "        <tr>\n",
+              "            <th>order_id</th>\n",
+              "            <th>customer_id</th>\n",
+              "            <th>pizza_id</th>\n",
+              "            <th>exclusions</th>\n",
+              "            <th>extras</th>\n",
+              "            <th>order_time</th>\n",
+              "        </tr>\n",
+              "    </thead>\n",
+              "    <tbody>\n",
+              "        <tr>\n",
+              "            <td>10</td>\n",
+              "            <td>104</td>\n",
+              "            <td>1</td>\n",
+              "            <td>2, 6</td>\n",
+              "            <td>1, 4</td>\n",
+              "            <td>2020-01-11 18:34:49</td>\n",
+              "        </tr>\n",
+              "    </tbody>\n",
+              "</table>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -880,6 +948,183 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "%%sql\n",
+        "with RECURSIVE hours as (\n",
+        "  select 1 as hr \n",
+        "  union all \n",
+        "  select hr+1 from hours where hr < 24\n",
+        ")\n",
+        "Select h.hr as hr_of_day,\n",
+        "       sum(case when c.order_id is null then 0 else 1 end) as orders_cnt \n",
+        "from hours h left join customer_orders c \n",
+        "         on h.hr = cast(extract(HOUR from c.order_time) as INTEGER)\n",
+        "group by h.hr\n",
+        "order by h.hr"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 584
+        },
+        "id": "DSyAuEJXXEpz",
+        "outputId": "9883f3ee-2a64-4146-d76c-d9c9dec58bc1"
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " * postgresql://vqpuxtpr:***@tiny.db.elephantsql.com/vqpuxtpr\n",
+            "24 rows affected.\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[(1, 0),\n",
+              " (2, 0),\n",
+              " (3, 0),\n",
+              " (4, 0),\n",
+              " (5, 0),\n",
+              " (6, 0),\n",
+              " (7, 0),\n",
+              " (8, 0),\n",
+              " (9, 0),\n",
+              " (10, 0),\n",
+              " (11, 1),\n",
+              " (12, 0),\n",
+              " (13, 3),\n",
+              " (14, 0),\n",
+              " (15, 0),\n",
+              " (16, 0),\n",
+              " (17, 0),\n",
+              " (18, 3),\n",
+              " (19, 1),\n",
+              " (20, 0),\n",
+              " (21, 3),\n",
+              " (22, 0),\n",
+              " (23, 3),\n",
+              " (24, 0)]"
+            ],
+            "text/html": [
+              "<table>\n",
+              "    <thead>\n",
+              "        <tr>\n",
+              "            <th>hr_of_day</th>\n",
+              "            <th>orders_cnt</th>\n",
+              "        </tr>\n",
+              "    </thead>\n",
+              "    <tbody>\n",
+              "        <tr>\n",
+              "            <td>1</td>\n",
+              "            <td>0</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>2</td>\n",
+              "            <td>0</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>3</td>\n",
+              "            <td>0</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>4</td>\n",
+              "            <td>0</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>5</td>\n",
+              "            <td>0</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>6</td>\n",
+              "            <td>0</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>7</td>\n",
+              "            <td>0</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>8</td>\n",
+              "            <td>0</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>9</td>\n",
+              "            <td>0</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>10</td>\n",
+              "            <td>0</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>11</td>\n",
+              "            <td>1</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>12</td>\n",
+              "            <td>0</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>13</td>\n",
+              "            <td>3</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>14</td>\n",
+              "            <td>0</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>15</td>\n",
+              "            <td>0</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>16</td>\n",
+              "            <td>0</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>17</td>\n",
+              "            <td>0</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>18</td>\n",
+              "            <td>3</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>19</td>\n",
+              "            <td>1</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>20</td>\n",
+              "            <td>0</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>21</td>\n",
+              "            <td>3</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>22</td>\n",
+              "            <td>0</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>23</td>\n",
+              "            <td>3</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>24</td>\n",
+              "            <td>0</td>\n",
+              "        </tr>\n",
+              "    </tbody>\n",
+              "</table>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 53
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "what was the volume of orders for each day of the week?"
@@ -887,6 +1132,86 @@
       "metadata": {
         "id": "fquE93Sz6qgp"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%sql\n",
+        " --extract(DOW from order_time)::INTEGER day_of_week,\n",
+        "select to_char(order_time,'DY'),\n",
+        "       count(1) order_cnt \n",
+        "from customer_orders\n",
+        "group by to_char(order_time,'DY'),extract(DOW from order_time)\n",
+        "order by extract(DOW from order_time)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 161
+        },
+        "id": "G_uvgKaLhsET",
+        "outputId": "6ac3a5b4-e7dc-4288-fa5c-05478ecef379"
+      },
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " * postgresql://vqpuxtpr:***@tiny.db.elephantsql.com/vqpuxtpr\n",
+            "4 rows affected.\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('WED', 5), ('THU', 3), ('FRI', 1), ('SAT', 5)]"
+            ],
+            "text/html": [
+              "<table>\n",
+              "    <thead>\n",
+              "        <tr>\n",
+              "            <th>to_char</th>\n",
+              "            <th>order_cnt</th>\n",
+              "        </tr>\n",
+              "    </thead>\n",
+              "    <tbody>\n",
+              "        <tr>\n",
+              "            <td>WED</td>\n",
+              "            <td>5</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>THU</td>\n",
+              "            <td>3</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>FRI</td>\n",
+              "            <td>1</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>SAT</td>\n",
+              "            <td>5</td>\n",
+              "        </tr>\n",
+              "    </tbody>\n",
+              "</table>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 72
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "HUlpFyCqh02J"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
